# clash-compiler

./: cabal.project
.ci/: build_docs.sh  setup.sh
clash-ghc/: clash-ghc.cabal
clash-ghc/src-ghc/Clash/GHC/: GHC2Core.hs  GenerateBindings.hs
clash-ghc/src-ghc/Clash/GHC/PartialEval/: Eval.hs
clash-hedgehog/: clash-hedgehog.cabal
clash-hedgehog/src/Clash/Hedgehog/Core/: DataCon.hs  Name.hs  Term.hs  Type.hs  Var.hs
clash-hedgehog/test/: unittests.hs
clash-hedgehog/test/Test/Clash/Hedgehog/Core/: Type.hs
clash-lib/: clash-lib.cabal
clash-lib/src/Clash/: Driver.hs  Netlist.hs  Util.hs
clash-lib/src/Clash/Core/: FreeVars.hs  HasType.hs  Pretty.hs  Subst.hs  Term.hs
clash-lib/src/Clash/Core/PartialEval/: AsTerm.hs  Monad.hs  NormalForm.hs
clash-lib/src/Clash/Netlist/: Util.hs
clash-lib/src/Clash/Normalize/: PrimitiveReductions.hs  Strategy.hs  Util.hs
clash-lib/src/Clash/Normalize/Transformations/: ANF.hs  Case.hs  Cast.hs  DEC.hs  EtaExpand.hs  Inline.hs  Letrec.hs  MultiPrim.hs  Reduce.hs  Specialize.hs  XOptimize.hs
clash-lib/src/Clash/Primitives/ROM/: File.hs
clash-lib/src/Clash/Rewrite/: Util.hs  WorkFree.hs
clash-prelude/: clash-prelude.cabal
clash-prelude/src/Clash/Explicit/BlockRam/: File.hs
clash-prelude/src/Clash/Explicit/ROM/: File.hs
clash-prelude/src/Clash/Signal/Bundle/: Internal.hs
tests/: Main.hs  clash-testsuite.cabal
tests/src/Test/Tasty/: Clash.hs  Common.hs  Ghdl.hs  Iverilog.hs  Modelsim.hs
