cabal-version:      2.2

name:               clash-hedgehog
version:            1.5.0
synopsis:           Hedgehog Generators for the Clash Compiler
description:        Hedgehog Generators for the Clash Compiler
bug-reports:        https://github.com/clash-lang/clash-compiler/issues
license:            BSD-2-Clause
license-file:       LICENSE
author:             QBayLogic B.V.
maintainer:         devops@qbaylogic.com
copyright:          Copyright © 2021, QBayLogic B.V.
category:           Hardware
build-type:         Simple

flag clash-lib
  description: Include generators for types in `clash-lib`
  default: False
  manual: True

common basic-config
  default-language: Haskell2010

  default-extensions:
    BinaryLiterals
    DataKinds
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  if impl(ghc >= 8.6)
    default-extensions:
      NoStarIsType

  ghc-options:
    -Wall -Wcompat

  build-depends:
    base,
    hedgehog,

library
  import: basic-config
  hs-source-dirs: src

  exposed-modules:
    Clash.Hedgehog.Signal
    Clash.Hedgehog.Sized.BitVector
    Clash.Hedgehog.Sized.Index
    Clash.Hedgehog.Sized.Signed
    Clash.Hedgehog.Sized.Unsigned
    Clash.Hedgehog.Sized.RTree
    Clash.Hedgehog.Sized.Vector

  build-depends:
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    text,

    clash-prelude,

  if flag(clash-lib)
    cpp-options: -DCLASH_LIB_GENERATORS

    exposed-modules:
      Clash.Hedgehog.Core.DataCon
      Clash.Hedgehog.Core.Literal
      Clash.Hedgehog.Core.Monad
      Clash.Hedgehog.Core.Name
      Clash.Hedgehog.Core.Term
      Clash.Hedgehog.Core.TyCon
      Clash.Hedgehog.Core.Type
      Clash.Hedgehog.Core.Var
      Clash.Hedgehog.Internal.Bias
      Clash.Hedgehog.Unique

    build-depends:
      containers,
      data-binary-ieee754,
      fakedata,
      hedgehog-fakedata,
      mmorph,
      mtl,
      pretty-show,
      primitive,
      transformers,

      clash-lib,

test-suite unittests
  import: basic-config
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: unittests.hs

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    tasty,
    tasty-hedgehog,

    clash-hedgehog,

  if flag(clash-lib)
    cpp-options: -DCLASH_LIB_GENERATORS

    build-depends:
      clash-lib,

    other-modules:
      Test.Clash.Hedgehog.Core.Type

